--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "pos": "^0.1.7",
     "request": "^2.44.0",
     "socket.io": "^1.1.0",
-    "wordpos": "^0.1.10"
+    "wordpos": "^0.1.10",
+    "bluebird": "^2.3.2",
+    "jsonwebtoken": "^1.1.2",
+    "q": "^1.0.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.2.22",
